kubernetes/apps/observability/victoria-metrics/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.perry.cafe/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-metrics
spec:
  hostnames:
    - victoriametrics.perryhuynh.com
  parentRefs:
    - name: envoy-internal
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - name: vmsingle-victoria-metrics
          port: 8428
---
# yaml-language-server: $schema=https://kubernetes-schemas.perry.cafe/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-metrics-alertmanager
spec:
  hostnames: ["alertmanager.perryhuynh.com"]
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - name: vmalertmanager-victoria-metrics
          namespace: observability
          port: 9093
